# Crewai-Tutorial

./: pyproject.toml  report.md  requirements.txt
.devcontainer/: devcontainer.json
src/latest_ai_development/: app.py  crew.py  main.py
src/latest_ai_development/tools/: email_ops.py
